@@ -1,1 +1,2 @@
 DIST cg3-0.9.9~r10800.tar.bz2 265674 SHA256 c85446c671fdb55dc01bf6092dd32ccb05ad4e057563d5c4293ee2409df610ba SHA512 4d7ac7debb55642204eb6099228977064791dd9712056a02104538d1603a6308cd1ad2eb02e28b3f25f9b1442578b841a7cdacdf13fb2dcaa6472c544a7ae1b5 WHIRLPOOL 160f96a0737e3ed12880c3d0ec25be64a91abb5892039b430583b42622293a90934149ca675e33fd8c9240bfd13ccdea46312692386979aec95ff9ac90cf3e02
+DIST cg3-1.1.0~r12312.tar.bz2 282578 SHA256 b3702b80ee3adceda482ca759918168e18900c63fe6d1a0b70b3c698f8213399 SHA512 24036082357ac6febf8348eb7370dc7cf258d7908502ad5b7d485c902318fe70bc78afb88afcd15143d6ee474d60c4b16b29e5d301c06496e9f4b7b70da13c42 WHIRLPOOL fe5d17e0b377be161d221328f413584d4ffd40059a64b90276b53a9033b28c69a978f04f5023978e2987d9a06d8145778bd4985bd9db43b9c15fb91e4e85d279
