@@ -1,6 +1,12 @@
 # ChangeLog for sci-misc/vislcg3
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*vislcg3-1.1.0.12312 (29 Aug 2017)
+
+  29 Aug 2017; Flammie Pirinen <flammie@gentoo.org> +vislcg3-1.1.0.12312.ebuild,
+  metadata.xml:
+  sci-misc/vislcg3: version bump to 1.1.0
 
   09 Nov 2015; Flammie Pirinen <flammie@gentoo.org> -vislcg3-0.9.9.10822.ebuild:
   remove old svn version
